--- a/css/qcsl.css
+++ b/css/qcsl.css
@@ -835,7 +835,7 @@ div.unread-mentions-indicator-bottom {
 }
 
 .emojiPicker-3m1S-j .stickyHeader-1SS0JU {
-    background: rgba(55,55,55,.6);
+    background: transparent;
 }
 
 .bda-dark .emoji-picker .scroller::-webkit-scrollbar, .bda-dark .emoji-picker .scroller::-webkit-scrollbar-track, .bda-dark .emoji-picker .scroller::-webkit-scrollbar-track-piece, .bda-dark .emojiPicker-3m1S-j .scroller-3vODG7::-webkit-scrollbar, .bda-dark .emojiPicker-3m1S-j .scroller-3vODG7::-webkit-scrollbar-track, .bda-dark .emojiPicker-3m1S-j .scroller-3vODG7::-webkit-scrollbar-track-piece {
@@ -850,11 +850,6 @@ div.unread-mentions-indicator-bottom {
 .emojiPicker-3m1S-j .category-2U57w6 {
     color: var(--text-hover-color);
     padding-left: 8px;
-}
-
-.emojiPicker-3m1S-j .stickyHeader-1SS0JU {
-    background: rgba(36,36,36,.6);
-    box-shadow: inset 9px 0 0px -7px var(--main-color);
 }
 
 .uploadModal-2ifh8j {
@@ -1216,7 +1211,7 @@ padding: 0 !important;
 .emojiPicker-3m1S-j .category-2U57w6 {
     color: var(--text-hover-color);
     padding-left: 8px;
-margin-to:8px;
+margin-top:8px;
     margin-bottom: 8px;
 border-radius: 3px;
     background: rgba(36,36,36,.6);
