--- a/css/scsl.css
+++ b/css/scsl.css
@@ -558,6 +558,7 @@ div.unread-mentions-indicator-bottom {
 }
 
 .guildsWrapper-5TJh6A .guilds-1q_RqH .guild-1EfMGQ {
+    margin-left: 8px;
     margin-top: 8px;
 }
 
@@ -1209,4 +1210,7 @@ border-radius: 3px;
 }
 .scrollerThemed-2oenus.themeDark-2cjlUp.scrollerTrack-1ZIpsv>.scroller-2FKFPG::-webkit-scrollbar-track, .scrollerThemed-2oenus.themeDark-2cjlUp.scrollerTrack-1ZIpsv>.scrollerStore-390omS::-webkit-scrollbar-track, .theme-dark .scrollerWrap-2lJEkd.scrollerTrack-1ZIpsv>.scroller-2FKFPG::-webkit-scrollbar-track, .theme-dark .scrollerWrap-2lJEkd.scrollerTrack-1ZIpsv>.scrollerStore-390omS::-webkit-scrollbar-track, .theme-light .scrollerThemed-2oenus.themeDark-2cjlUp.scrollerTrack-1ZIpsv>.scroller-2FKFPG::-webkit-scrollbar-track, .theme-light .scrollerThemed-2oenus.themeDark-2cjlUp.scrollerTrack-1ZIpsv>.scrollerStore-390omS::-webkit-scrollbar-track {
     background-color: rgba(255,255,255,0.15);
+}
+.tooltips-FhwIyl.da-tooltips * {
+    background-color: rgba(0,0,0,.75) !important;
 }
