--- a/css/qcsl.css
+++ b/css/qcsl.css
@@ -1322,5 +1322,5 @@ padding: 0 !important;
 
 
 .guilds-1q_RqH > .guild-1EfMGQ:nth-last-child(2) {
-    margin-right: 0;
+    margin-right: 0 !important;
 }
