--- a/css/tcsl.css
+++ b/css/tcsl.css
@@ -1302,5 +1302,5 @@ padding: 0 !important;
 
 
 .guilds-1q_RqH > .guild-1EfMGQ:nth-last-child(2) {
-    margin-right: 0;
+    margin-right: 0 !important;
 }
