--- a/css/scsl.css
+++ b/css/scsl.css
@@ -1276,3 +1276,7 @@ padding: 0 !important;
 .emojiPicker-3m1S-j .stickyHeader-1SS0JU {
     background: rgba(0,0,0,.8);
 }
+
+.theme-dark .pageWrapper-1PgVDX {
+    background-color: var(--main-transparency);
+}
