--- a/css/tcsl.css
+++ b/css/tcsl.css
@@ -1138,9 +1138,8 @@ div.unread-mentions-indicator-bottom {
     border-radius: 3px;
 }
 
-
 .theme-dark .autocomplete-1vrmpx {
-    background-color: rgba(0,0,0,.6);
+    background-color: rgba(0,0,0,.9);
 }
 
 .theme-dark .header-1TOWci {
@@ -1278,4 +1277,20 @@ padding: 0 !important;
 
 .theme-dark .pageWrapper-1PgVDX {
     background-color: var(--main-transparency);
+}
+
+.theme-dark .selectorSelected-1_M1WV {
+    background-color: rgba(255,255,255,.25);
+}
+
+.theme-dark .container-3ayLPN {
+    background-color: rgba(0,0,0,.9);
+}
+
+.theme-dark .option-96V44q:after {
+    background: none;
+}
+
+.theme-dark .option-96V44q.selected-rZcOL- {
+    background-color: rgba(255,255,255,.15);
 }
