--- a/css/dcsl.css
+++ b/css/dcsl.css
@@ -1294,3 +1294,23 @@ padding: 0 !important;
 .theme-dark .option-96V44q.selected-rZcOL- {
     background-color: rgba(255,255,255,.15);
 }
+
+.theme-dark .searchResult-3pzFAB .hit-NLlWXA {
+    box-shadow: none;
+}
+
+.theme-dark .searchResult-3pzFAB .searchResultMessage-2VxO12.hit-NLlWXA {
+    border: 2px solid rgba(255,255,255,.15);
+}
+
+.theme-dark .jumpButton-Ia2hRJ {
+    background-color: rgba(255,255,255,.15);
+}
+
+.theme-dark .searchAnswer-3Dz2-q, .theme-dark .searchFilter-2ESiM3 {
+    background-color: rgba(255,255,255,.15);
+}
+
+.searchAnswer-3Dz2-q, .searchFilter-2ESiM3 {
+    margin-right: 4px;
+}
