more contrast to result list

--- a/css/dcsl.css
+++ b/css/dcsl.css
@@ -1314,3 +1314,7 @@ padding: 0 !important;
 .searchAnswer-3Dz2-q, .searchFilter-2ESiM3 {
     margin-right: 4px;
 }
+
+.resultsWrapper-hoiXCY {
+    background-color: rgba(0,0,0,.2);
+}
