--- a/css/qcsl.css
+++ b/css/qcsl.css
@@ -1335,3 +1335,7 @@ padding: 0 !important;
 .searchAnswer-3Dz2-q, .searchFilter-2ESiM3 {
     margin-right: 4px;
 }
+
+.resultsWrapper-hoiXCY {
+    background-color: rgba(0,0,0,.2);
+}
