--- a/css/qcsl.css
+++ b/css/qcsl.css
@@ -548,7 +548,7 @@ div.unread-mentions-indicator-bottom {
     background: rgba(58, 113, 193, 0.15) !important;
 }
 
-.wrapper-1Rf91z{width: 242;}
+.wrapper-1Rf91z{width: 242px;}
 .wrapper-1Rf91z .scroller-wrap{width: 251px;}
 .wrapper-1Rf91z .scroller-2TZvBN {
     display: flex;
