--- a/css/tcsl.css
+++ b/css/tcsl.css
@@ -1406,3 +1406,7 @@ box-shadow-none !important;
     background: transparent;
     border-radius: 15px;
 }
+
+.theme-dark .wrapper-2lTRaf {
+    background: transparent;
+}
