--- a/css/scsl.css
+++ b/css/scsl.css
@@ -1554,3 +1554,15 @@ box-shadow-none !important;
 .theme-dark .searchBox-3Y2Vi7 {
     background-color: rgba(255,255,255,.15);
 }
+
+/* CODE BELOW FOR COLUMNS */
+
+.wrapper-1Rf91z .scroller-2TZvBN div[class~="listItem-2P_4kh"] {
+    width: 50px;
+    margin-left: 8px;
+}
+
+.wrapper-1Rf91z .scroller-2TZvBN > div.listItem-2P_4kh:nth-child(1),
+.wrapper-1Rf91z .scroller-2TZvBN > div.listItem-2P_4kh:nth-child(2) {
+    width: 100% !important;
+}
