--- a/css/scsl.css
+++ b/css/scsl.css
@@ -1579,7 +1579,7 @@ box-shadow-none !important;
 
 /* Guild listing styles */
 
-.wrapper-1Rf91z .scroller-2TZvBN > div.listItem-2P_4kh:nth-child(1) {
+/* .wrapper-1Rf91z .scroller-2TZvBN > div.listItem-2P_4kh:nth-child(1) {
     width: 100% !important;
     margin-left: 0;
     margin-bottom: 20px;
@@ -1642,4 +1642,4 @@ box-shadow-none !important;
     display: block;
     margin: 10px auto 5px;
     margin-left: 10px;
-}
+} */
