--- a/css/qcsl.css
+++ b/css/qcsl.css
@@ -1597,7 +1597,8 @@ box-shadow-none !important;
 
 .wrapper-1Rf91z .scroller-2TZvBN > div.listItem-2P_4kh:nth-child(1) {
     width: 100% !important;
-    margin-bottom: 20px;    
+    margin-bottom: 20px; 
+    margin-left: 2px;   
 }
 
 .wrapper-1Rf91z .scroller-2TZvBN > div.listItem-2P_4kh:nth-child(1) .item-2hkk8m {
@@ -1623,42 +1624,48 @@ box-shadow-none !important;
 }
 
 .wrapper-sa6paO {
-    height: 10px;
-    width: 54px;
+    height: 52px;
+    width: 52px;
 }
-
 .item-2hkk8m {
     animation: var(--unread-server-animation) 3s linear infinite;
-    background-color: var(--main-color);
-    border-radius: inherit;
+    border: 2px solid var(--main-color);
+    background: transparent;
     border-radius: 100%;
     display: block;
     margin-left: 0;
     margin-top: 0;
     position: absolute;
-    top: 1px;
-    right: 2px;
-    /* width: 8px; */
-    height: 8px !important;
-    z-index: 10;
+    top: 0;
+    right: 0 !important;
+    width: 48px;
+    height: 48px !important;
+    /* remove the left to right display transformation */
+    transform: none !important;
 }
-
 .pill-31IEus {
-    left: 0;
+    left: -2px;
     position: absolute;
-    top: -4px;
+    top: -2px;
 }
-
 .wrapper-1Rf91z .scroller-2TZvBN .guildSeparator-3s64Iy {
     position: relative;
     width: 100%;
     margin-top: 10px;
-    width: 193px;
+    width: 80px;
     display: block;
     margin: 10px auto 5px;
-    margin-left: 10px;
+    margin-left: 12px;
 }
 
+.listItem-2P_4kh.da-listItem:hover .item-2hkk8m {
+    border-radius: 18px;
+    border: none;
+    transition: none !important;
+}
 .item-2hkk8m:not([style *= "height: 8px"]) {
-    background: transparent;
+    border-color: transparent;
+}
+.item-2hkk8m:not([style *= "opacity: 0.7"]) {
+    border-color: transparent;
 }
