unread guild styles variations support

--- a/css/qcsl.css
+++ b/css/qcsl.css
@@ -1665,6 +1665,7 @@ box-shadow-none !important;
 }
 .item-2hkk8m:not([style *= "height: 8px"]) {
     border-color: transparent;
+    background-color: transparent;
 }
 .item-2hkk8m:not([style *= "opacity: 0.7"]) {
     border-color: transparent;
