--- a/css/tcsl.css
+++ b/css/tcsl.css
@@ -1664,6 +1664,7 @@ box-shadow-none !important;
 }
 .item-2hkk8m:not([style *= "height: 8px"]) {
     border-color: transparent;
+    background-color: transparent;
 }
 .item-2hkk8m:not([style *= "opacity: 0.7"]) {
     border-color: transparent;
