--- a/css/dcsl.css
+++ b/css/dcsl.css
@@ -1633,7 +1633,7 @@ box-shadow-none !important;
     margin-left: 0;
     margin-top: 0;
     position: absolute;
-    top: 2px;
+    top: 0;
     right: 2px !important;
     width: 48px;
     height: 48px !important;
