--- a/css/tcsl.css
+++ b/css/tcsl.css
@@ -1624,8 +1624,8 @@ box-shadow-none !important;
 }
 
 .wrapper-sa6paO {
-    height: 52px;
-    width: 52px;
+    height: 54px;
+    width: 54px;
 }
 .item-2hkk8m {
     animation: var(--unread-server-animation) 3s linear infinite;
@@ -1637,7 +1637,7 @@ box-shadow-none !important;
     margin-top: 0;
     position: absolute;
     top: 0;
-    right: 0 !important;
+    right: 2px !important;
     width: 48px;
     height: 48px !important;
     /* remove the left to right display transformation */
