--- a/css/qcsl.css
+++ b/css/qcsl.css
@@ -1670,3 +1670,7 @@ box-shadow-none !important;
 .item-2hkk8m:not([style *= "opacity: 0.7"]) {
     border-color: transparent;
 }
+
+.typeMacOS-3EmCyP {
+    background: var(--main-transparency);
+}
