--- a/css/dcsl.css
+++ b/css/dcsl.css
@@ -1670,3 +1670,7 @@ box-shadow-none !important;
 .typeMacOS-3EmCyP {
     background: var(--main-transparency);
 }
+body>div:last-of-type {
+    background: var(--background-image) !important;
+    background-size: cover !important;
+}
