--- a/css/qcsl.css
+++ b/css/qcsl.css
@@ -1674,3 +1674,8 @@ box-shadow-none !important;
 .typeMacOS-3EmCyP {
     background: var(--main-transparency);
 }
+
+body>div:last-of-type {
+    background: var(--background-image) !important;
+    background-size: cover !important;
+}
