--- a/css/scsl.css
+++ b/css/scsl.css
@@ -1663,3 +1663,8 @@ box-shadow-none !important;
 .typeMacOS-3EmCyP {
     background: var(--main-transparency);
 }
+
+body>div:last-of-type {
+    background: var(--background-image) !important;
+    background-size: cover !important;
+}
